# client-mediasoup-native

./: .gitignore  CMakeLists.txt  README.md  binding.gyp  build.sh  log.txt  package.json  prepare.sh  run.sh  tsconfig.json
include/: Broadcaster.hpp  DigitalStageClient.hpp  RtAudioCaptureModule.hpp  RtAudioDeviceModule.hpp  audio_device_rtaudio.h
src/: functions.ts  index.ts  model.d.ts
src/models/: Device.ts
src_cpp/: Broadcaster.cpp  DigitalStageClient.cpp  MediaStreamTrackFactory.cpp  RtAudioCaptureModule.cpp  RtAudioDeviceModule.cpp  addon.cc  audio_device_rtaudio.cc  main.cpp  peerConnectionUtils.cpp
src_cpp/fakegenerators/: fake_audio_capture_module.cc
standalone/: CMakeLists.txt
